--- a/python/problem_011.ipynb
+++ b/python/problem_011.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Grids\n",
     "grid = [\n",
     "    [8 ,  2, 22, 97, 38, 15,  0, 40,  0, 75,  4,  5,  7, 78, 52, 12, 50, 77, 91,  8], \n",
     "    [49, 49, 99, 40, 17, 81, 18, 57, 60, 87, 17, 40, 98, 43, 69, 48,  4, 56, 62,  0], \n",
@@ -48,35 +47,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Grid lines\n",
-    "def grid_lines(grid):\n",
-    "    # grid size\n",
-    "    grid_length_horizontal = len(grid[0])\n",
-    "    grid_length_vertical = len(grid)\n",
+    "def get_lines(matrix):\n",
     "\n",
-    "    # init grid lines\n",
-    "    grid_horizontals = [list() for _ in range(grid_length_horizontal)]\n",
-    "    grid_verticals = [list() for _ in range(grid_length_vertical)]\n",
-    "    grid_diagonals_foreward = [list() for _ in range(grid_length_horizontal + grid_length_vertical - 1)]\n",
-    "    grid_diagonals_backward = [list() for _ in range(grid_length_horizontal + grid_length_vertical - 1)]\n",
-    "\n",
-    "    # fill grid lines\n",
-    "    for x in range(grid_length_horizontal):\n",
-    "        for y in range(grid_length_vertical):\n",
-    "            grid_horizontals[y].append(grid[y][x])\n",
-    "            grid_verticals[x].append(grid[y][x])\n",
-    "            grid_diagonals_foreward[x+y].append(grid[y][x])\n",
-    "            grid_diagonals_backward[x-y+grid_length_vertical-1].append(grid[y][x])\n",
+    "    nrows = len(matrix)\n",
+    "    ncols = len(matrix[0])\n",
     "    \n",
-    "    # lines\n",
-    "    lines = {}\n",
-    "    lines['horizontals'] = grid_horizontals\n",
-    "    lines['verticals'] = grid_verticals\n",
-    "    lines['diagonals_forward'] = grid_diagonals_foreward\n",
-    "    lines['diagonals_backward'] = grid_diagonals_backward\n",
+    "    h = [[] for _ in range(nrows)] # horizontal lines\n",
+    "    v = [[] for _ in range(ncols)] # vertical lines\n",
+    "    f = [[] for _ in range(nrows + ncols - 1)] # forward diagonals\n",
+    "    b = [[] for _ in range(nrows + ncols - 1)] # backward diagonals\n",
+    "    \n",
+    "    for i in range(nrows):\n",
+    "        for j in range(ncols):\n",
+    "            h[i].append(matrix[i][j]) # horizontal line\n",
+    "            v[j].append(matrix[i][j]) # vertical line\n",
+    "            f[i + j].append(matrix[i][j]) # forward diagonal\n",
+    "            b[i - j + nrows - 2].append(matrix[i][j]) # backward diagonal\n",
     "\n",
-    "    # return\n",
-    "    return lines"
+    "    return {\n",
+    "        \"lines_horizontal\": h,\n",
+    "        \"lines_vertical\": v,\n",
+    "        \"diagonals_forward\": f,\n",
+    "        \"diagonals_backward\": b\n",
+    "    }"
    ]
   },
   {
@@ -86,8 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Greatest product of n adjacent numbers\n",
     "def greatest_adjacent_numbers(n, grid_lines):\n",
+    "    \n",
     "    # Flatten list\n",
     "    lines = [line for sub_list in [value for key, value in grid_lines.items()] for line in sub_list]\n",
     "\n",
@@ -117,37 +110,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "66cafa2c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "horizontals [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
-      "verticals [[1, 4, 7], [2, 5, 8], [3, 6, 9]]\n",
-      "diagonals_forward [[1], [4, 2], [7, 5, 3], [8, 6], [9]]\n",
-      "diagonals_backward [[7], [4, 8], [1, 5, 9], [2, 6], [3]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Test run\n",
-    "test_grid = [\n",
-    "    [ 1, 2, 3], \n",
-    "    [ 4, 5, 6], \n",
-    "    [ 7, 8, 9], \n",
-    "]\n",
-    "\n",
-    "for key, value in grid_lines(test_grid).items():\n",
-    "    print(key, value)\n",
-    "\n",
-    "assert greatest_adjacent_numbers(2, grid_lines(test_grid)) == 72 # 8 * 9"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "bb826667",
    "metadata": {},
    "outputs": [
@@ -157,20 +119,37 @@
        "70600674"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
-    "greatest_adjacent_numbers(4, grid_lines(grid))"
+    "greatest_adjacent_numbers(4, get_lines(grid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b5fab265",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "335 μs ± 2.59 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit greatest_adjacent_numbers(4, get_lines(grid))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
