--- a/python/problem_012.ipynb
+++ b/python/problem_012.ipynb
@@ -71,7 +71,6 @@
     "    tri = 0 # init\n",
     "    while len(factors(tri)) <= n:\n",
     "        tri = next(tri_num)\n",
-    "        # print(tri, factors(tri))\n",
     "    return tri"
    ]
   },
@@ -152,8 +151,7 @@
     }
    ],
    "source": [
-    "%%timeit\n",
-    "divisors(500)"
+    "%timeit divisors(500)"
    ]
   }
  ],
