--- a/python/problem_017.ipynb
+++ b/python/problem_017.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dictionary\n",
     "dictionary = {\n",
     "    1 : 'one',\n",
     "    2 : 'two',\n",
@@ -57,8 +56,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# One digit numbers to text\n",
     "def one(n):\n",
+    "    \"\"\"\n",
+    "    One digit numbers to text\n",
+    "    \"\"\"\n",
     "    assert len(str(n)) == 1 and n >= 1\n",
     "    text = dictionary[n]\n",
     "    return text"
@@ -67,42 +68,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5935fe88",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 'one'),\n",
-       " (2, 'two'),\n",
-       " (3, 'three'),\n",
-       " (4, 'four'),\n",
-       " (5, 'five'),\n",
-       " (6, 'six'),\n",
-       " (7, 'seven'),\n",
-       " (8, 'eight'),\n",
-       " (9, 'nine')]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Test run\n",
-    "[(i, one(i)) for i in range(1, 10)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "188bfa0a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Two digit numbers to text\n",
     "def two(n):\n",
+    "    \"\"\"\n",
+    "    Two digit numbers to text\n",
+    "    \"\"\"\n",
     "    assert len(str(n)) == 2\n",
     "    text = ''\n",
     "    s = str(n)\n",
@@ -112,61 +85,20 @@
     "            text += ' ' + dictionary[int(s[-1])]\n",
     "    else:\n",
     "        text += dictionary[int(s)]\n",
-    "    return text\n",
-    "\n"
+    "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "567f5ad3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(10, 'ten'),\n",
-       " (11, 'eleven'),\n",
-       " (12, 'twelve'),\n",
-       " (13, 'thirteen'),\n",
-       " (14, 'fourteen'),\n",
-       " (15, 'fifteen'),\n",
-       " (16, 'sixteen'),\n",
-       " (17, 'seventeen'),\n",
-       " (18, 'eighteen'),\n",
-       " (19, 'nineteen'),\n",
-       " (20, 'twenty'),\n",
-       " (21, 'twenty one'),\n",
-       " (22, 'twenty two'),\n",
-       " (23, 'twenty three'),\n",
-       " (24, 'twenty four'),\n",
-       " (25, 'twenty five'),\n",
-       " (26, 'twenty six'),\n",
-       " (27, 'twenty seven'),\n",
-       " (28, 'twenty eight'),\n",
-       " (29, 'twenty nine'),\n",
-       " (30, 'thirty')]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Test run\n",
-    "[(i, two(i)) for i in range(10, 31)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e9ae0094",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Three digit numbers to text\n",
     "def three(n):\n",
+    "    \"\"\"\n",
+    "    Three digit numbers to text\n",
+    "    \"\"\"\n",
     "    assert len(str(n)) == 3\n",
     "    text = ''\n",
     "    s = str(n)\n",
@@ -176,42 +108,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b83fff98",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(100, 'one hundred'),\n",
-       " (111, 'one hundred'),\n",
-       " (200, 'two hundred'),\n",
-       " (222, 'two hundred'),\n",
-       " (300, 'three hundred'),\n",
-       " (333, 'three hundred'),\n",
-       " (900, 'nine hundred'),\n",
-       " (999, 'nine hundred')]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Test run\n",
-    "[(i, three(i)) for i in [100, 111, 200, 222, 300, 333, 900, 999]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "befc52c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Four digit numbers to text, when n=1000\n",
     "def four(n):\n",
+    "    \"\"\"\n",
+    "    Four digit numbers to text, when n=1000\n",
+    "    \"\"\"\n",
     "    assert n == 1000\n",
     "    text = ''\n",
     "    s = str(n)\n",
@@ -221,34 +126,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "360d560c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'one thousand'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Test run\n",
-    "four(1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "a4457d13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number Letter Counts\n",
     "def number_letter_counts(n):\n",
     "    assert n >= 1 and n <= 1000\n",
     "    written = {}\n",
@@ -271,44 +153,29 @@
     "        else:\n",
     "            pass\n",
     "        written[i] = number\n",
-    "    return written\n",
-    "    "
+    "    return written"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "c47727c1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 one\n",
-      "11 eleven\n",
-      "20 twenty\n",
-      "50 fifty\n",
-      "99 ninety nine\n",
-      "100 one hundred\n",
-      "110 one hundred and ten\n",
-      "111 one hundred and eleven\n",
-      "999 nine hundred and ninety nine\n",
-      "1000 one thousand\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Selection of results\n",
-    "d = number_letter_counts(1000)\n",
-    "for key in [1, 11, 20, 50, 99, 100, 110, 111, 999, 1000]:\n",
-    "    print(key, d[key])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "147edd5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def letter_counts(d):\n",
+    "    count = 0\n",
+    "    for value in d.values():\n",
+    "        for char in value:\n",
+    "            if char != ' ':\n",
+    "                count += 1\n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c9c4aee5",
    "metadata": {},
    "outputs": [
     {
@@ -317,25 +184,37 @@
        "21124"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
-    "count = 0\n",
-    "for value in d.values():\n",
-    "    for char in value:\n",
-    "        if char != ' ':\n",
-    "            count += 1\n",
-    "count"
+    "letter_counts(number_letter_counts(1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "109f4dd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.62 ms ± 16 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit letter_counts(number_letter_counts(1000))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
