--- a/python/problem_018.ipynb
+++ b/python/problem_018.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data\n",
     "data = \"\"\"\n",
     "   3\n",
     "  7 4\n",
@@ -32,7 +31,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Triangle\n",
     "triangle = [[int(string) for string in row.split()] for row in data.split('\\n')[1:-1]];"
    ]
   },
@@ -43,7 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Maximum Path\n",
     "def maximum_path(triangle):\n",
     "    for row_index in range(len(triangle)-2, -1, -1):\n",
     "        new_values = []\n",
@@ -60,64 +57,30 @@
    "execution_count": 4,
    "id": "421d5d05",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "maximum_path(triangle) == 23"
+    "assert maximum_path(triangle) == 23"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a91c95af",
+   "id": "6681562d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = \"\"\"\n",
-    "                            75\n",
-    "                          95  64\n",
-    "                        17  47  82\n",
-    "                      18  35  87  10\n",
-    "                    20  04  82  47  65\n",
-    "                  19  01  23  75  03  34\n",
-    "                88  02  77  73  07  63  67\n",
-    "              99  65  04  28  06  16  70  92\n",
-    "            41  41  26  56  83  40  80  70  33\n",
-    "          41  48  72  33  47  32  37  16  94  29\n",
-    "        53  71  44  65  25  43  91  52  97  51  14\n",
-    "      70  11  33  28  77  73  17  78  39  68  17  57\n",
-    "    91  71  52  38  17  14  91  43  58  50  27  29  48\n",
-    "  63  66  04  68  89  53  67  30  73  16  69  87  40  31\n",
-    "04  62  98  27  23  09  70  98  73  93  38  53  60  04  23\n",
-    "\"\"\""
+    "def get_data(f):\n",
+    "    triangle = []\n",
+    "    with open(f) as file:\n",
+    "        while line := file.readline():\n",
+    "            triangle.append([int(s) for s in line.strip().split()])\n",
+    "    return triangle"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b81e560d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Triangle\n",
-    "triangle = [[int(string) for string in row.split()] for row in data.split('\\n')[1:-1]];"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "1b8ed5ab",
+   "id": "d04fb8ee",
    "metadata": {},
    "outputs": [
     {
@@ -126,14 +89,31 @@
        "1074"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
-    "maximum_path(triangle)"
+    "maximum_path(get_data(\"../data/0018_triangle.txt\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fd4f3ade",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45.3 μs ± 1.7 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit maximum_path(get_data(\"../data/0018_triangle.txt\"))"
    ]
   }
  ],
