--- a/python/problem_020.ipynb
+++ b/python/problem_020.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Factorial\n",
     "def fac(n):\n",
     "    x = 1\n",
     "    for i in range(2, n+1):\n",
@@ -31,7 +30,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Digit Sum\n",
     "def digit_sum(n):\n",
     "    return sum([int(x) for x in str(n)])"
    ]
@@ -54,14 +52,31 @@
     }
    ],
    "source": [
-    "# Answer\n",
     "digit_sum(fac(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "86a8039f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.1 μs ± 253 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit digit_sum(fac(100))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
