--- a/python/problem_014.ipynb
+++ b/python/problem_014.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sequence functions\n",
     "def even(n): return int(n/2)\n",
     "def odd(n): return 3*n + 1"
    ]
@@ -28,7 +27,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Collatz Sequence\n",
     "def collatz(n):\n",
     "    sequence = []\n",
     "    while n != 1:\n",
@@ -43,30 +41,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8ae2547d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[13, 40, 20, 10, 5, 16, 8, 4, 2, 1]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "collatz(13)"
+    "assert collatz(13) == [13, 40, 20, 10, 5, 16, 8, 4, 2, 1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "id": "33355599",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def longest_collatz(hi=1_000_000):\n",
+    "    sequences = {}\n",
+    "    for n in range(1, hi):\n",
+    "        sequences[len(collatz(n))] = n\n",
+    "    return sequences[max(sequences.keys())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "41017f19",
    "metadata": {},
    "outputs": [
     {
@@ -75,24 +75,37 @@
        "837799"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
-    "sequences = {}\n",
-    "for n in range(1, 1_000_000):\n",
-    "    sequences[len(collatz(n))] = n\n",
-    "\n",
-    "sequences[max(sequences.keys())]"
+    "longest_collatz(1_000_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1bf309df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.8 s ± 32.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit longest_collatz(1_000_000)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
