--- a/python/problem_016.ipynb
+++ b/python/problem_016.ipynb
@@ -27,14 +27,31 @@
     }
    ],
    "source": [
-    "# Answer\n",
     "sum([int(s) for s in str(2**1_000)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "72d622de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.5 μs ± 57.5 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sum([int(s) for s in str(2**1_000)])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
