--- a/python/problem_019.ipynb
+++ b/python/problem_019.ipynb
@@ -10,13 +10,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "90d1c4b1",
+   "metadata": {},
+   "source": [
+    "#### Solution 1 (custom function)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cb6ec1ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Leap year\n",
     "def leapyear(year):\n",
     "    return (year % 4 == 0) and ((year % 100 != 0) or (year % 400 == 0))"
    ]
@@ -24,71 +31,31 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6964b811",
+   "id": "caa08c07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lists\n",
-    "thirty = [4, 6, 9, 11]\n",
-    "days = ['mon', 'tue', 'wed', 'thu', 'fri', 'sat', 'sun']"
+    "def counting_sundays(year_start, year_end):\n",
+    "    \n",
+    "    day = 1 # assumed to be a Sunday (not true)\n",
+    "    correction = 2 # 1901-01-01 was on a Tuesday\n",
+    "    sunday_count = 0\n",
+    "\n",
+    "    for year in range(year_start, year_end + 1):\n",
+    "        for month_days in [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31]:\n",
+    "            day += month_days\n",
+    "            if leapyear(year) and month_days == 28:\n",
+    "                day += 1\n",
+    "            if day % 7 == 0:\n",
+    "                sunday_count += 1\n",
+    "\n",
+    "    return sunday_count - correction"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b0350c13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Day generator\n",
-    "def day():\n",
-    "    days = ['mon', 'tue', 'wed', 'thu', 'fri', 'sat', 'sun']\n",
-    "    index = 0\n",
-    "    while True:\n",
-    "        d = days[index]\n",
-    "        index += 1\n",
-    "        if index > 6:\n",
-    "            index = 0\n",
-    "        yield d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "39b272d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create list of dates\n",
-    "year_begin = 1900\n",
-    "year_end = 2000\n",
-    "\n",
-    "dates = []\n",
-    "dd = day()\n",
-    "thirty = [4, 6, 9, 11]\n",
-    "\n",
-    "for year in range(year_begin, year_end + 1):\n",
-    "    leap = leapyear(year)\n",
-    "    for month in range(1, 12 + 1):\n",
-    "\n",
-    "        if month == 2:\n",
-    "            if leap:\n",
-    "                days = 29\n",
-    "            else:\n",
-    "                days = 28\n",
-    "        elif month in thirty:\n",
-    "            days = 30\n",
-    "        else:\n",
-    "            days = 31\n",
-    "        \n",
-    "        for day in range(1, days + 1):\n",
-    "            dates.append([year, month, day, next(dd)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "c50a3b56",
+   "id": "e6b927bb",
    "metadata": {},
    "outputs": [
     {
@@ -97,20 +64,97 @@
        "171"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
-    "sum([1 for d in dates if d[0] != 1900 and d[2] == 1 and d[3] == 'sun'])"
+    "counting_sundays(1901, 2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2e84c396",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99.9 μs ± 2.97 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit counting_sundays(1901, 2000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8212d8bd",
+   "metadata": {},
+   "source": [
+    "#### Solution 2 (pandas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ef01d238",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c98bb809",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "171"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates = pd.date_range(start=\"1901-01-01\", end=\"2000-12-31\")\n",
+    "sum([1 for (d, dn) in zip(dates.day.values, dates.day_name()) if d == 1 and dn == \"Sunday\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b4c0ca63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.86 ms ± 264 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "dates = pd.date_range(start=\"1901-01-01\", end=\"2000-12-31\")\n",
+    "sum([1 for (d, dn) in zip(dates.day.values, dates.day_name()) if d == 1 and dn == \"Sunday\"])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
