--- a/python/problem_021.ipynb
+++ b/python/problem_021.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Factors\n",
     "def d(n):\n",
     "    f = []\n",
     "    for i in range(1, n):\n",
@@ -30,21 +29,9 @@
    "execution_count": 2,
    "id": "e18a2e1c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "d(d(220)) == 220"
+    "assert d(d(220)) == 220"
    ]
   },
   {
@@ -54,7 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Amicables\n",
     "def amicables(n):\n",
     "    amicable_numbers = []\n",
     "    for n in range(n):\n",
@@ -83,14 +69,31 @@
     }
    ],
    "source": [
-    "# Answer\n",
     "sum(amicables(10_000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "71e2073e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.01 s ± 3.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sum(amicables(10_000))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
