--- a/python/problem_022.ipynb
+++ b/python/problem_022.ipynb
@@ -27,8 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sorted list of names\n",
-    "names = list(pd.read_csv('data/0022_names.txt').T.index)\n",
+    "names = list(pd.read_csv('../data/0022_names.txt').T.index)\n",
     "names.sort()\n"
    ]
   },
@@ -39,7 +38,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Alphabetical value\n",
     "alphabetical_value = {value:key+1 for (key, value) in enumerate(string.ascii_uppercase)}"
    ]
   },
@@ -50,7 +48,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Name value\n",
     "def name_value(name):\n",
     "    value = 0\n",
     "    for letter in name:\n",
@@ -63,21 +60,9 @@
    "execution_count": 5,
    "id": "efedce9a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "name_value('COLIN') == 53"
+    "assert name_value('COLIN') == 53"
    ]
   },
   {
@@ -98,14 +83,31 @@
     }
    ],
    "source": [
-    "# Answer\n",
     "sum([(i+1)*(name_value(n)) for (i, n) in enumerate(names)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6c122671",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.27 ms ± 52.8 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sum([(i+1)*(name_value(n)) for (i, n) in enumerate(names)])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
