--- a/python/problem_024.ipynb
+++ b/python/problem_024.ipynb
@@ -16,19 +16,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports\n",
     "import itertools"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "99c22dd0",
+   "id": "9709d045",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2783915460"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Setup\n",
-    "n = 1_000_000"
+    "permutations = list(itertools.permutations([str(n) for n in range(10)]))\n",
+    "permutations.sort()\n",
+    "int(''.join(permutations[999999]))"
    ]
   },
   {
@@ -36,39 +47,26 @@
    "execution_count": 3,
    "id": "81fe1c88",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Permuations\n",
-    "permutations = list(itertools.permutations([str(n) for n in range(10)]))\n",
-    "permutations.sort()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "f222a899",
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'2783915460'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "326 ms ± 4.87 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
     }
    ],
    "source": [
-    "# Answer\n",
-    "''.join(permutations[n-1])"
+    "%%timeit\n",
+    "permutations = list(itertools.permutations([str(n) for n in range(10)]))\n",
+    "permutations.sort()\n",
+    "int(''.join(permutations[999999]))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
