--- a/python/problem_029.ipynb
+++ b/python/problem_029.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Distinct Powers\n",
     "def distinct_power(start, end):\n",
     "    power = []\n",
     "    for i in range(start, end+1):\n",
@@ -27,24 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bdc029a2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "distinct_power(2, 5) == 15"
+    "assert distinct_power(2, 5) == 15"
    ]
   },
   {
@@ -65,8 +52,25 @@
     }
    ],
    "source": [
-    "# Answer\n",
     "distinct_power(2, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "49f91135",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.43 ms ± 4.73 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit distinct_power(2, 100)"
    ]
   }
  ],
