--- a/python/problem_030.ipynb
+++ b/python/problem_030.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Digit Fifth Powers\n",
     "def powers(start, end, power):\n",
     "    results = []\n",
     "    for n in range(start, end):\n",
@@ -34,21 +33,9 @@
    "execution_count": 2,
    "id": "9957b42b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "powers(start=2, end=1_000_000, power=4) == 19316"
+    "assert powers(start=2, end=1_000_000, power=4) == 19316"
    ]
   },
   {
@@ -69,8 +56,25 @@
     }
    ],
    "source": [
-    "# Answer\n",
     "powers(start=2, end=10_000_000, power=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "05162b0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.44 s ± 55.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit powers(start=2, end=10_000_000, power=5)"
    ]
   }
  ],
