--- a/python/problem_023.ipynb
+++ b/python/problem_023.ipynb
@@ -12,22 +12,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "41525d10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = 28123"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "cf1a7e34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Factors\n",
     "def f(n):\n",
+    "    \"\"\"\n",
+    "    factorial sum\n",
+    "    f(10) == 8 # sum(1, 2, 5)\n",
+    "    \"\"\"\n",
     "    f = []\n",
     "    for i in range(1, n):\n",
     "        if n%i == 0:\n",
@@ -37,12 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ebc1f6a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Abundant\n",
     "def abundant(n):\n",
     "    abundants = []\n",
     "    for i in range(1, n+1):\n",
@@ -53,33 +45,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "32d1dab9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def non_abundant_sums(n=28123):\n",
+    "\n",
+    "    # Abundant list\n",
+    "    abundants = abundant(n)\n",
+    "\n",
+    "    # Combinations\n",
+    "    combinations = []\n",
+    "    for i in abundants:\n",
+    "        for j in abundants:\n",
+    "            combinations.append((i, j, i+j))\n",
+    "    \n",
+    "    # Answer\n",
+    "    answer = 0\n",
+    "    s = set([x[-1] for x in combinations])\n",
+    "    for i in range (n+1):\n",
+    "        if i not in s:\n",
+    "            answer += i\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
-   "id": "53c0c3eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Abundant list\n",
-    "abundants = abundant(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "dbdd0b3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Combinations\n",
-    "combinations = []\n",
-    "for i in abundants:\n",
-    "    for j in abundants:\n",
-    "        combinations.append((i, j, i+j))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "b8023ad4",
+   "id": "f902502f",
    "metadata": {},
    "outputs": [
     {
@@ -88,25 +82,37 @@
        "4179871"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
-    "answer = 0\n",
-    "s = set([x[-1] for x in combinations])\n",
-    "for i in range (n+1):\n",
-    "    if i not in s:\n",
-    "        answer += i\n",
-    "answer"
+    "non_abundant_sums(n=28123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "94635cc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.4 s ± 205 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit non_abundant_sums(n=28123)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
