--- a/python/problem_025.ipynb
+++ b/python/problem_025.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fibonacci generator\n",
     "def fibonacci():\n",
     "    a, b = 0, 1\n",
     "    while True:\n",
@@ -27,45 +26,64 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e191fff6",
+   "id": "99c22dd0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setup\n",
-    "n = 1_000"
+    "def nthdigitfib(n):\n",
+    "    fib = fibonacci()\n",
+    "    counter = 0\n",
+    "    while True:\n",
+    "        f = next(fib)\n",
+    "        l = len(str(f))\n",
+    "        if l == n:\n",
+    "            return counter\n",
+    "        counter += 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "99c22dd0",
+   "id": "a3515c3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4782"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nthdigitfib(1_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4b726253",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4782\n"
+      "20.1 ms ± 372 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "# Answer\n",
-    "fib = fibonacci()\n",
-    "counter = 0\n",
-    "while True:\n",
-    "    f = next(fib)\n",
-    "    l = len(str(f))\n",
-    "    if l == n:\n",
-    "        print(counter)\n",
-    "        break\n",
-    "    counter += 1"
+    "%timeit nthdigitfib(1_000)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
