--- a/python/problem_019.ipynb
+++ b/python/problem_019.ipynb
@@ -37,11 +37,12 @@
    "source": [
     "def counting_sundays(year_start, year_end):\n",
     "    \n",
-    "    day = 1 # assumed to be a Sunday (not true)\n",
-    "    correction = 2 # 1901-01-01 was on a Tuesday\n",
+    "    day = 1 # 1 Jan 1900 is a monday; 6 days later is a Sunday (day 7). So day%7 == 0 is True for  all Sundays.\n",
     "    sunday_count = 0\n",
     "\n",
-    "    for year in range(year_start, year_end + 1):\n",
+    "    for year in range(1900, year_end + 1):\n",
+    "        if year == year_start:\n",
+    "            sunday_count = 0\n",
     "        for month_days in [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31]:\n",
     "            day += month_days\n",
     "            if leapyear(year) and month_days == 28:\n",
@@ -49,7 +50,7 @@
     "            if day % 7 == 0:\n",
     "                sunday_count += 1\n",
     "\n",
-    "    return sunday_count - correction"
+    "    return sunday_count"
    ]
   },
   {
@@ -83,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "99.9 μs ± 2.97 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "98.6 μs ± 296 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -141,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.86 ms ± 264 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "7.83 ms ± 426 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
