--- a/python/problem_092.ipynb
+++ b/python/problem_092.ipynb
@@ -12,11 +12,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "40f4cb3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "bb066cb5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Square Digit Chain\n",
     "def square_digit_train(n):\n",
     "    if n == 1:\n",
     "        return False\n",
@@ -25,7 +34,6 @@
     "    while n not in [1, 89]:\n",
     "        s = str(n)\n",
     "        n = sum([int(c)**2 for c in s])\n",
-    "        # print((s, n))\n",
     "        if n == 1:\n",
     "            return False\n",
     "        if n == 89:\n",
@@ -34,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "516cc039",
    "metadata": {},
    "outputs": [
@@ -44,14 +52,32 @@
        "8581146"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
     "sum([square_digit_train(n) for n in range(1, 10_000_000)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7ae15781",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.7 s ± 266 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = %timeit -o sum([square_digit_train(n) for n in range(1, 10_000_000)])\n",
+    "euler.save_benchmark(92, t)"
    ]
   }
  ],
