--- a/python/problem_045.ipynb
+++ b/python/problem_045.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "import euler"
    ]
   },
   {
@@ -27,7 +27,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Formulae\n",
     "def triangle(n):\n",
     "    return int(n*(n+ 1 )/2)\n",
     "\n",
@@ -43,24 +42,54 @@
    "execution_count": 3,
    "id": "2421e2f1",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def triangle_number(n):\n",
+    "    nums = [number for sub_list in [[triangle(n), pentagonal(n), hexagonal(n)] for n in range(1, n+1)] for number in sub_list]\n",
+    "    counts = Counter(nums)\n",
+    "    for i in set(nums):\n",
+    "        if i not in [1, 40755] and counts[i] == 3:\n",
+    "            return i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "94341868",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1533776805"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "triangle_number(75_000) # try till first result shows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "82a7b5a3",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1533776805\n"
+      "54.8 ms ± 226 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "# Answer\n",
-    "n = 75_000 # try till first result shows\n",
-    "nums = [number for sub_list in [[triangle(n), pentagonal(n), hexagonal(n)] for n in range(1, n+1)] for number in sub_list]\n",
-    "\n",
-    "counts = Counter(nums)\n",
-    "for i in set(nums):\n",
-    "    if i not in [1, 40755] and counts[i] == 3:\n",
-    "        print(i)"
+    "t = %timeit -o triangle_number(75_000)\n",
+    "euler.save_benchmark(45, t)"
    ]
   }
  ],
