--- a/julia/problem_001.ipynb
+++ b/julia/problem_001.ipynb
@@ -99,30 +99,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "71d32486",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  629.900 ns (0 allocations: 0 bytes)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "233168"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "@btime sum(n -> n%3 == 0 || n%5 == 0 ? n : 0, 1:999)"
+    "b = @btime sum(n -> n%3 == 0 || n%5 == 0 ? n : 0, 1:999)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "700bbf53",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
