--- a/python/problem_042.ipynb
+++ b/python/problem_042.ipynb
@@ -16,53 +16,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports\n",
-    "import pandas as pd\n",
-    "import string"
+    "import string\n",
+    "import euler"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f99c616a",
+   "id": "2ba089a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read file\n",
-    "words = list(pd.read_csv('data/0042_words.txt').T.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "14ef3865",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dictionary\n",
+    "words = open('../data/0042_words.txt', 'r').read().replace('\"', '').split(',')\n",
     "alphabet = {key:value for (key, value) in zip(string.ascii_uppercase, range(1, len(string.ascii_uppercase)+1))}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2c92bf21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Triangle number\n",
     "def triangle(n):\n",
     "    return int(.5*n*(n+1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c511cd1f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Triangle numbers\n",
     "def triangles(n):\n",
     "    triangle_list = [-1]\n",
     "    counter = 1\n",
@@ -74,19 +60,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9cc15d53",
+   "execution_count": 5,
+   "id": "c471c8d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Triangles\n",
-    "triangle_list = triangles(max([len(w) for w in words]))"
+    "def coded_triangle_numbers():\n",
+    "    triangle_list = triangles(max([len(w) for w in words]))\n",
+    "    counter = 0\n",
+    "    for word in words:\n",
+    "        value = 0\n",
+    "        for letter in word:\n",
+    "            value += alphabet[letter]\n",
+    "        if value in triangle_list:\n",
+    "            counter += 1\n",
+    "    return counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a40dfcef",
+   "execution_count": 6,
+   "id": "772de720",
    "metadata": {},
    "outputs": [
     {
@@ -95,21 +89,32 @@
        "162"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
-    "counter = 0\n",
-    "for word in words:\n",
-    "    value = 0\n",
-    "    for letter in word:\n",
-    "        value += alphabet[letter]\n",
-    "    if value in triangle_list:\n",
-    "        counter += 1\n",
-    "counter"
+    "coded_triangle_numbers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "30e46679",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "718 μs ± 46.7 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = %timeit -o coded_triangle_numbers()\n",
+    "euler.save_benchmark(42, t)"
    ]
   }
  ],
